test/libsolidity/syntaxTests/comments/multiline_unicode_direction_override_6.sol
contract C {
    function f() public pure
    {
        // PDF RLO
        /*overflow ‬‮*/
    }
}
// ----
// ParserError 8936: (75-86='/*overflow'): Unicode direction override underflow in comment or string literal.
